# foundation-planckCoreSequoiaBackend

./: .codespellrc  .gitignore  .gitlab-ci.yml  Cargo.toml  Makefile  NMakefile  README.md  build.rs  import_keydata.diff  local.conf.example  local.mak.example  pEpEngineSequoiaBackendProject.vcxproj  pep_engine_sequoia_backend.pc.in  pgp_import_keydata.diff  sequoia-pep-engine-crypto.pc.in
.cargo/: config  config.toml
.ci/: all_commits.sh
.github/workflows/: release.yml
build-win64/: pEpEngineSequoiaBackendProject.vcxproj
src/: buffer.rs  constants.rs  ffi.rs  import_keydata.rs  import_keydata_strict.rs  keystore.rs  lib.rs  log.rs  pep.rs  pgp_import_keydata.rs  pgp_import_keydata_strict.rs
src/pep/: identity.rs  session.rs  stringlist.rs
