[package]
name = "pEpEngineSequoiaBackend"
description = "An implementation of the p≡p Engine's cryptotech interface using Sequoia."
version = "0.1.0"
authors = ["Neal H. Walfield <neal@pep.foundation>"]
homepage = "https://sequoia-pgp.org/"
repository = "https://gitea.pep.foundation/neal/pEpEngineSequoiaBackend/"
readme = "README.md"
keywords = ["cryptography", "openpgp", "pgp", "encryption", "signing"]
categories = ["cryptography", "authentication", "email"]
license = "GPL-3.0-or-later"
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow = "1"
backtrace = "0.3.61"
buffered-reader = "1"
chrono = "0.4"
configparser = "2"
csv = "1.1"
# XXX: Until enumber is released with this commit.
enumber = { git = "https://github.com/kinnison/enumber/", rev = "810972f23d5874edbb1761db8cb0f59dfb5dbfa9" }
lazy_static = "1"
libc = "0.2"
lru = "0.6.6"
memmem = "0.1"
memoffset = "0.6"
num_cpus = "1"
sequoia-openpgp = "1.3"
thiserror = "1"

[dependencies.rusqlite]
version = "0.25"
features = ["bundled", "collation", "blob"]

[lib]
crate-type = ["cdylib"]
